[package]
name = "tiny-compiler-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tiny-compiler-rs"
path = "src/main.rs"

[[bin]]
name = "lab2"
path = "src/lab2/lab2.rs"

[[bin]]
name = "lab1"
path = "src/bin/lab1.rs"

[[bin]]
name = "lab3"
path = "src/bin/lab3.rs"

[[bin]]
name = "lab4"
path = "src/bin/lab4.rs"

[dependencies]
once_cell = "1.19"
thiserror = "1.0"
